trunk/Archive2/89/461cbe39731183/output
main.cpp:7:3: error: no matching function for call to 'f'
  f(i);
  ^
main.cpp:1:6: note: candidate function not viable: no known conversion from 'int' to 'int &&' for 1st argument
void f(int &&x) {
     ^
1 error generated.
